[package]
name = "udpproxi"
version = "0.1.1"
edition = "2021"
authors = ["xutianyi <xutianyi1999@live.com>"]
description = "udp forwarding library"
license = "Apache-2.0"
repository = "https://github.com/xutianyi1999/udpproxi"

[dependencies]
arc-swap = "1"
tokio = { version = "1", default-features = false, features = ["rt", "time", "macros", "net"] }
chrono = "0.4"
log = "0.4"
